<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/settings">
        <Preference
            android:icon="@drawable/ic_baseline_portable_wifi_off_24"
            android:key="@string/unpair_key"
            android:summary="@string/unpair_summary"
            android:title="@string/unpair_title" />
        <Preference
            android:icon="@drawable/ic_baseline_delete_24"
            android:key="@string/reset_keys_key"
            android:summary="@string/reset_keys_summary"
            android:title="@string/reset_keys_title" />
        <Preference
            android:icon="@drawable/ic_baseline_settings_backup_restore_24"
            android:key="@string/restart_key"
            android:summary="@string/restart_summary"
            android:title="@string/restart_title" />
        <com.draco.ladb.views.SwitchInfoPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_baseline_home_repair_service_24"
            android:key="@string/auto_shell_key"
            android:summary="@string/auto_shell_summary"
            android:title="@string/auto_shell_title"
            android:widgetLayout="@layout/preference_widget_material_switch" />
        <EditTextPreference
            android:defaultValue="16384"
            android:dialogLayout="@layout/dialog_text_input"
            android:icon="@drawable/ic_baseline_home_repair_service_24"
            android:key="@string/buffer_size_key"
            android:summary="@string/buffer_size_summary"
            android:title="@string/buffer_size_title" />
        <EditTextPreference
            android:defaultValue="@string/startup_command_default"
            android:icon="@drawable/ic_baseline_home_repair_service_24"
            android:dialogLayout="@layout/dialog_text_input"
            android:key="@string/startup_command_key"
            android:summary="@string/startup_command_summary"
            android:title="@string/startup_command_title" />
        <ListPreference
            android:defaultValue=""
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:icon="@drawable/ic_baseline_language_24"
            android:key="@string/language_key"
            android:summary="%s"
            android:title="@string/language_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/troubleshooting">
        <Preference
            android:icon="@drawable/ic_baseline_checklist_24"
            android:key="@string/tutorial_key"
            android:summary="@string/tutorial_summary"
            android:title="@string/tutorial_title" />
        <Preference
            android:icon="@drawable/ic_baseline_error_24"
            android:title="@string/error_waiting_title"
            app:summary="@string/error_waiting_summary" />
        <Preference
            android:icon="@drawable/ic_baseline_error_24"
            android:summary="@string/error_no_wireless_debugging_summary"
            android:title="@string/error_no_wireless_debugging_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about">
        <Preference
            android:icon="@drawable/ic_baseline_telegram_24"
            android:key="@string/developer_key"
            android:summary="@string/developer_summary"
            android:title="@string/developer_title" />
        <Preference
            android:icon="@drawable/ic_baseline_code_24"
            android:key="@string/source_key"
            android:summary="@string/source_summary"
            android:title="@string/source_title" />
    </PreferenceCategory>
</PreferenceScreen>