<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingBottom="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/add_remote_message"
            android:textAppearance="?attr/textAppearanceBodyMedium" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ShellInputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_hint_alias">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/device_alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/device_host_layout"
            style="@style/ShellInputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/add_hint_host">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/device_host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/device_pair_port_layout"
            style="@style/ShellInputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/add_hint_pair_port">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/device_pair_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/device_code_layout"
            style="@style/ShellInputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/add_hint_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/device_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/device_connect_port_layout"
            style="@style/ShellInputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/add_hint_connect_port"
            app:helperText="@string/add_hint_connect_port_helper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/device_connect_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>
