<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <View android:id="@+id/status_bar_background"
          android:layout_width="match_parent"
          android:layout_height="5dp"
          android:background="?android:statusBarColor"
          android:elevation="4dp"
          android:outlineProvider="none"/>

    <RelativeLayout android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true">
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:trackCornerRadius="2dp"/>

        <LinearLayout
            android:id="@+id/device_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/progress"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/device_selector"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="start|center_vertical"
                android:maxLines="1"
                android:text="@string/device_local"
                app:icon="@drawable/ic_baseline_adb_24"
                app:iconGravity="textStart"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_device"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add_remote_device"
                app:icon="@drawable/ic_baseline_add_24"/>
        </LinearLayout>

        <ScrollView
            android:id="@+id/output_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/command_container"
            android:layout_below="@id/device_bar"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/output"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textIsSelectable="true"
                    android:textSize="12sp"/>
            </HorizontalScrollView>
        </ScrollView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/command_container"
            style="@style/ShellInputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/command_hint_waiting">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/command"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:imeOptions="actionSend"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>
</RelativeLayout>